--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,7 +1,8 @@
 body {
     background-color: #F3F3F3;
 }
-
+li{list-style: none}
+*{margin:0;padding:0;text-align: center}
 .m_layout {
     min-width: 300px;
     max-width: 640px;
@@ -105,7 +106,7 @@ body {
 /*点*/
 
 .m_banner ul:last-child {
-    //width: 118px;
+    width: 118px;
     height: 6px;
     position: absolute;
     left: 50%;
@@ -307,3 +308,4 @@ body {
     font-family: "微软雅黑";
     font-size: 16px;
 }
+
