--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -13,7 +13,10 @@ body {
     font-family: "Microsoft YaHei" sans-serif;
     color: #000;
 }
-
+main{
+    max-width:750px;
+    margin:0 auto;
+}
 a {
     text-decoration: none;
     color: #000;
@@ -43,7 +46,7 @@ textarea {
 }
 
 [class^='icon'] {
-    background: url("./../images/sprites.png") no-repeat;
+    background: url("../images/sprites.png") no-repeat;
     background-size: 200px 200px;
 }
 
@@ -53,7 +56,7 @@ textarea {
     background: url("../images/header-bg.png") repeat-x;
     background-size: 1px 44px;
     border-bottom: 1px solid #bfbfbf;
-    position: fixed;
+    position: absolute;
     z-index: 2;
 }
 
